# DLT

./: README.md
doc/方案文档/: 跨域转账身份验证方案.doc
doc/科普&快速入门/: 基于DLT的 去中心化身份验证（DID，Decentralized Identity）.docx  比特币--区块链到底是什么？.md
doc/调研/: 传统反洗钱AML工作存在的问题.docx  传统身份验证风险.docx  基于DLT金融服务数字身份验证（消费者画像）.docx
final_demo/: Cargo.toml
final_demo/public/: index.html
final_demo/src/: func.rs  main.rs
solana_transaction_server/: Cargo.toml
solana_transaction_server/public/: index.html
solana_transaction_server/src/: main.rs
transfer/: index.html  package.json  readme.txt  server.js
transfer/~/: my-new-wallet.json
zk-snark/: Cargo.toml
zk-snark/src/: main.rs
zk-snark_3/: Cargo.toml
zk-snark_3/src/: main.rs
