[package]
name = "zk-snarks"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-ec = { version = "0.4", features = ["std"] }
ark-ff = "0.4"
ark-std = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4" 
rand = "0.8"
actix-web = "4.0"
actix-files = "0.6"
webbrowser = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
blake3 = "1.3" # 添加 blake3 哈希库