
[package]
name = "solana-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.116"  # 新增
actix-web = "4.4.0"
actix-files = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
solana-client = "1.17.18"
solana-sdk = "1.17.18"
tokio = { version = "1.0", features = ["full"] }
openssl = "0.10.63"
webbrowser = "0.8.10"
anyhow = "1.0.80"