[package]
name = "zk-snarks"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = { version = "0.5"}
ark-groth16 = { version = "0.5", features = ["r1cs"] }
ark-snark = "0.5"
ark-ec = { version = "0.5", features = ["std"] }
ark-ff = { version = "0.5", features = ["std"] }
ark-std = "0.5"
ark-r1cs-std = { version = "0.5"}
ark-relations = "0.5"
ark-serialize = "0.5" 
rand = "0.8.5"